--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb?createDatabaseIfNotExist=true
+spring.datasource.url= jdbc:mysql://localhost:3306/organizador-financeiro?createDatabaseIfNotExist=true
 spring.datasource.username= root
 spring.datasource.password= projeto
 
