Update project - jwt authentication

--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.7.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bezkoder</groupId>
-	<artifactId>spring-boot-security-jwt</artifactId>
+	<groupId>br.com.g6</groupId>
+	<artifactId>organizadorfinanceir</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-security-jwt</name>
-	<description>Demo project for Spring Boot Security - JWT</description>
+	<name>organizadorfinanceiro</name>
+	<description>Projeto Integrador - Organizador Financeiro</description>
 
 	<properties>
 		<java.version>1.8</java.version>
