--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.hibernate.ddl-auto= update
 # App Properties
 organizador.app.jwtSecret= orgFinSecretKey
 organizador.app.jwtExpirationMs= 86400000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=meu.boleto.pago.g6@gmail.com
+spring.mail.password=xvwlahokfpedcgco
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
