--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/organizador-financeiro?createDatabaseIfNotExist=true
-spring.datasource.username= root
-spring.datasource.password= projeto
+spring.datasource.url= jdbc:mysql://organizador.mysql.database.azure.com:3306/organizador-financeiro?createDatabaseIfNotExist=true
+spring.datasource.username= organizador
+spring.datasource.password= HLr9H5Rd3x5N6LhaJAuD
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
 organizador.app.jwtSecret= orgFinSecretKey
+
 organizador.app.jwtExpirationMs= 86400000
 
 spring.mail.host=smtp.gmail.com
