--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.url= jdbc:mysql://organizador.mysql.database.azure.com:3306/organizador-financeiro?createDatabaseIfNotExist=true
 spring.datasource.username= organizador
-spring.datasource.password= HLr9H5Rd3x5N6LhaJAuD
+spring.datasource.password= GTSHt5678haTZD786H
+
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
+
 
 # App Properties
 organizador.app.jwtSecret= orgFinSecretKey
