--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://organizador.mysql.database.azure.com:3306/organizador-financeiro?createDatabaseIfNotExist=true
 spring.datasource.username= organizador
-spring.datasource.password= GTSHt5678haTZD786H
+spring.datasource.password= senhadementira
 
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
